# neural-network

./: .gitignore  ActivationFunction.cpp  ActivationFunction.h  CMakeLists.txt  CostFunction.cpp  CostFunction.h  Layer.cpp  Layer.h  Network.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  NeuronBase.h  NeuronTrainingData.h  Optimization.cpp  Optimization.h  Options.h  README.md  TrainingConfig.h  TrainingReport.h  TrainingSample.h
.github/workflows/: Linux.yml  LinuxBuild.yml  LinuxBuildAndTest.yml  MacOs.yml  Windows.yml
src/: ADAMOptimizationAlgorithm.cpp  ADAMOptimizationAlgorithm.h  ActivationFunction.cpp  ActivationFunction.h  CostFunction.cpp  CostFunction.h  GradientDescendOptimizationAlgorithm.cpp  GradientDescendOptimizationAlgorithm.h  Layer.cpp  Layer.h  NeuralNetwork.cpp  Neuron.cpp  Neuron.h  OptimizationAlgorithm.cpp  OptimizationAlgorithm.h  SGDOptimizationAlgorithm.cpp  SGDOptimizationAlgorithm.h
tests/: CMakeLists.txt  Test.cpp
